--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -110,20 +110,25 @@ SECTION BELOW AND PASTE IT FURTHER DOWN AND ALTER THE 'ID' IN THE TOP LEVEL 'SEC
 				<li><a href="#" data-filter="*" class="current">All</a></li>
 				<li><a href="#" data-filter=".Pantheon">Pantheon Creation</a></li>
 				<li><a href="#" data-filter=".Multiverse">Multiverse Creation</a></li>
-				<li><a href="#" data-filter=".NEXT">NEXT Creation</a></li>
+				<li><a href="#" data-filter=".Kingdom">Kingdom Creation</a></li>
 			</ul>
 		</div> 
 	</div>
     <div class="portfolioContainer wow fadeInUp delay-04s">
             	<div class="Portfolio-box Pantheon">
-                	<a href="#Pantheon"><img src="img/creator.jpg" alt="Pantheon Creation"></a>
+                	<a href="#Pantheon"><img src="img/Pantheon.jpg" alt="Pantheon Creation"></a>
                 	<h3>Pantheon Creation</h3>
-                    <p>General Instructions on Pantheon World Creation!</p>
+                    <p>General Instructions on Pantheon Creation!</p>
                 </div>
-                <div class=" Portfolio-box NEXT">
-                	<a href="#NEXT"><img src="img/icon7.ico" alt="NEXT Creation"></a>
-                	<h3>NEXT Creation</h3>
-                    <p>General Instructions on Creation World Building!</p>
+            	<div class="Portfolio-box Multiverse">
+                	<a href="#Multiverse"><img src="img/creator.jpg" alt="Multiverse"></a>
+                	<h3>Multiverse</h3>
+                    <p>General Instructions on Multiverse Creation!</p>
+                </div>
+                <div class=" Portfolio-box Kingdom">
+                	<a href="Kingdom"><img src="img/Background2.jpg" alt="Kingdom"></a>
+                	<h3>Kingdom Creation</h3>
+                    <p>General Instructions on how to create a Kingdom!</p>
                 </div>
     </div>
 </section><!--main-section-end-->
@@ -159,12 +164,44 @@ TO MAINTAIN CONSISTANCY -->
 					<i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <p>Your Pantheon is Your Own. Your own Goddesses, Gods, Titans, Demi-Gods and So on. Keep in limited. Do not have 50 gods, well, you could, just not ideal for you or the player. 10-25 should be fine.
-						Naming them is simple: Take the core aspect or aspects of your God/Goddess and put them into Google Translate and form a work out of it.  Let’s use The God of Darkness, Nightmare, and Death.
-						If you pop this into Google Translate and set the output language to Latin, you come out with this: deus mortis, tenebris, et sequuntur somnia. Now That is a lot, let’s break it down into the pure core aspects.
-						Your Pantheon is Your Own. Your own Goddesses, Gods, Titans, Demi-Gods and So on. Keep in limited. Do not have 50 gods, well, you could, just not ideal for you or the player. 10-25 should be fine.
-						Mor-tene-nia making Mortenenia which sounds like more of a Goddess name, but we are making a God, we need something more menacing.  Now I see this Mor-tenebris, Mortenebris sounds good.
-						The key to this is, you have to pick what sounds good, rolls off the tongue, easy to remember. Then alternate from God, Goddess, God, Goddess, until you like the list you make.</p>
+                        <p>It is very simple to make a pantheon! </p>
+						<p>Just follow these simple steps! Clikc to find out more!</p>
+                    </div>
+                </div>
+            </div>
+            <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
+            	<img src="img/Pantheon.jpg" alt="Creator Image">
+            </figure>
+        
+        </div>
+	</div>
+</section><!--main-section-end-->
+
+<section class="main-section" id="Pantheon"><!--main-section-start-->
+	<div class="container">
+		<h2>Making a Multiverse</h2>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+        <div class="row">
+        	<div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+            	<div class="service-list">
+                	<div class="service-list-col1">
+                    </div>
+					<i></i>
+                	<div class="service-list-col2">
+						<h4>Making A Universe of Your Own Creation......</h4>
+						<h4>Article By: Cameron DeGeorge </h4>
+                    </div>
+                </div>
+                <div class="service-list">
+                	<div class="service-list-col1">
+					<i></i>
+                    </div>
+                	<div class="service-list-col2">
+                        <p>Creating a Multiverse is easier than what you may think! Click here to find out more!</p>
                     </div>
                 </div>
             </div>
@@ -176,12 +213,11 @@ TO MAINTAIN CONSISTANCY -->
 	</div>
 </section><!--main-section-end-->
 
-
 <!-- THIS SECTION FLOATS IN FROM THE LEFT, THE SECTION ABOVE FLOATS IN FROM THE RIGHT. ALTERNATE THIS TO KEEP THE FLOW CONSISTANT 
 THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT AN "OPPOSITE" OF THE SECTION ABOVE. -->
 <section class="main-section" id="NEXT"><!--main-section-start-->
 	<div class="container">
-		<h2>NEXT Creation</h2>
+		<h2>Kingdom Creation</h2>
 		<br>
 		<br>
 		<br>
@@ -189,7 +225,7 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
 		<br>
         <div class="row">
             <figure class="col-lg-5 col-sm-4 wow fadeInLeft">
-            	<img src="img/icon7.ico" alt="World Image">
+            	<img src="img/Background2.jpg" alt="World Image">
             </figure>
         	<div class="col-lg-7 col-sm-8 featured-work">
             	<div class="service-list">
@@ -197,7 +233,7 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
                     </div>
 					<i></i>
                 	<div class="service-list-col2">
-						<h4>Making NEXT World of Your Own Creation......</h4>
+						<h4>Kingdom Creation......</h4>
 						<h4>Article By: Cameron DeGeorge </h4>
                     </div>
                 </div>
@@ -206,12 +242,7 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
 					<i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <p>NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, 
-						NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, 
-						NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, 
-						NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, 
-						NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, 
-						NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, NEXT Description, </p>
+                        <p>Creating a Kingdom is extremely easy! Follow these simple steps! Click here to find out more! </p>
                     </div>
                 </div>
             </div>
