Update Group_C_D&D - About.html
I edited my section within the about page to see if you all agree with how I put in my information.

--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -296,8 +296,18 @@
                     	<i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
-                        <h3>Contribution 1</h3>
-                        <p>Contribution 1 Description</p>
+                        <h3>I'm Floyd!!</h3>
+						<p><li>
+						  My hobbies include basketball, video gaming, and reading.
+                        I'm a student at Jackson College.
+                        I'm currently studying Computer Programming Specialist.
+                       After Jackson, I plan to continue my education at Siena Heights University.
+					   </p>
+					   <h3></h3>
+                        <h3>Documentation/paperwork:</h3>
+						<p></p>
+						<p><li>One of my contributions for this project is handling/editing a good amount of the paperwork.
+								Our project manager give's me specific items or specific resources to ensure that I have what is need to complete our reports.</li></p>
                     </div>    
                 </div>
                 <div class="featured-box">
@@ -305,23 +315,12 @@
                     <i></i>
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>Contribution 2</h3>
-                        <p>Contribution 2 Description</p>
+                        <h3>About page creation:</h3>
+                        <p><li>Another of my contributions involves creating the about page for our group.
+						Each group member has their own section with information about them as well as their contributions to the project.
+						My job is to gather each individuals information and insert the material into specific group members area.</li></p>
                     </div>    
-                </div>
-                <div class="featured-box">
-                	<div class="featured-box-col1 wow fadeInRight delay-06s">
-                    <i></i>
-                    </div>	
-                	<div class="featured-box-col2 wow fadeInRight delay-06s">
-                        <h3>Contribution 3</h3>
-                        <p>Contribution 3 Description</p>
-                    </div>    
-                </div>
-                <a class="Learn-More" href="#">Learn More</a>
-            </div>
-        </div>
-	</div>
+               </div>
 </section><!--main-section alabaster-end-->
 
 
