Update Group_C_D&D - About.html

--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -247,8 +247,11 @@
                     </div>
 					<i></i>
                 	<div class="service-list-col2">
-                        <h3>Contribution 1</h3>
-                        <p>Contribution 1 Description</p>
+                        <h3>I'm Cameron</h3>
+                        <p><li>I've been playing Dungeons and Dragons for about 5 years.
+				I've been a Dungeons and Dragons master for the same amount of time, creating my own worlds and stories.
+				I wanted to show/teach other players how to create a d&d game and show others how easy it can be to create your own world.
+				My goal is to show as many people as I possibly can how to create their own story in the world of Dungeons and Dragons.</li></p>
                     </div>
                 </div>
                 <div class="service-list">
