filled in equipment content
started getting some images for character creation and a sample format for my image hyperlinks and filled in content for the equipment tertiary page

--- a/Group_C_D&D - character creation_equipment.html
+++ b/Group_C_D&D - character creation_equipment.html
@@ -16,6 +16,7 @@
 
     DATE			USER				DESCRIPTION OF CHANGE
     04/9/2020	William Cook			Initial implementation
+    04/11/2020  William Cook            Filled in content
 ============================================================================
 ======================================================================== -->
 
@@ -94,7 +95,7 @@
         <!--main-section-start-->
         <div class="container">
             <h2>Equipment</h2><br />
-            <h6>Here's a breakdown on equipment by class and our thoughts on equipment</h6>
+            <h6>Here's a breakdown on equipment and our thoughts on equipment</h6>
         </div>
     </section>
 
@@ -133,9 +134,50 @@
             <center>
                 <p><b>This table shows your starting gold if you choose to buy your own equipment</b></p>
             </center>
+            <br>
+            <br>
 
             <!--image-->
+            <figure class="col-lg-4 col-sm-6  text-right wow fadeInUp delay-02s">
+                <img src="img/equipment class gold.jpg" alt="class gold Image">
+            </figure>
 
+            <!--Fadein-->
+            <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
+                <br>
+                <!--Why choose gold-->
+                <div class="service-list">
+                    <div class="service-list-col1">
+                    </div>
+                    <i></i>
+                    <div class="service-list-col3">
+                        <h3><b>Why choose gold</b></h3>
+                        <p>
+                            Deciding to purchase your own gear can be a good alternative to
+                            using the default class gear. Buying your own loadout allows you
+                            more customization which can lead to better roleplaying and opting
+                            out on items that you're not interested in having.
+                        </p>
+                    </div>
+                </div>
+                <!--However...-->
+                <div class="service-list">
+                    <div class="service-list-col1">
+                    </div>
+                    <i></i>
+                    <div class="service-list-col4">
+                        <h3><b>However...</b></h3>
+                        <p>
+                            Opting to buy your own equipment should be something you do with caution.
+                            It can be easy to forget to take essential gear with you that you may
+                            find needing later. You should only purchase your own gear if you're
+                            comfortable with the character building process and getting the items
+                            that your character needs and is able to use.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
 
         </div>
 
@@ -150,17 +192,54 @@
             <h2>Non combat equipment</h2>
             <h6>Equipment for outside of battle is equally as important</h6>
 
-            <center>
-                <p>description</p>
-            </center>
+            <div align="center" class="row">
+                <!--Fadein-->
+                <div class="wow fadeInRight delay-05s">
+                    <br>
+                    <!--Why it's important-->
+                    <div class="service-list">
+                        <div class="service-list-col1">
+                        </div>
+                        <i></i>
+                        <div class="service-list-col3">
+                            <h3><b>Why it's important</b></h3>
+                            <p>
+                                Your character needs certain non combat equipment each day
+                                such as a bedroll to sleep in or rations to consume. Additionally
+                                your character may sometimes find himself on a mission where
+                                it would be beneficial to have a torch to light his way or a
+                                shovel to dig something up. There's many situations through an
+                                adventure where your character can really benefit from having
+                                the right tool to complete the task at hand.
+                            </p>
+                        </div>
+                    </div>
+                    <!--Being prepared-->
+                    <div class="service-list">
+                        <div class="service-list-col1">
+                        </div>
+                        <i></i>
+                        <div class="service-list-col4">
+                            <h3><b>Being prepared</b></h3>
+                            <p>
+                                It can be easiest to purchase gear directly before a quest, but
+                                it's usually best to have extra supplies on hand in case
+                                of the unexpected. Equipment does have weight but that one extra
+                                torch could make all the difference. Here's a
+                                <!--link-->
+                                <a href="https://www.dndbeyond.com/sources/basic-rules/equipment#OtherAdventuringGear">link</a>
+                                to a complete list of out of combat equipment so that you can
+                                make sure that your character is stocked up for his adventure.
+                            </p>
+                        </div>
+                    </div>
 
-            <!--link-->
-
+                </div>
+            </div>
 
         </div>
 
     </section><!--main-section-end-->
-
     <!-- ============================================================================================================================== -->
     <!-- ===================================================== Equipment and Stats ==================================================== -->
     <!-- ============================================================================================================================== -->
@@ -171,17 +250,66 @@
             <h2>Equipment and Stats</h2>
             <h6>The stats of your equipment is a big factor when deciding which gear you want</h6>
 
-            <center>
-                <p>description</p>
-            </center>
+            <div align="center" class="row">
+                <!--Fadein-->
+                <div class="wow fadeInLeft delay-05s">
+                    <br>
+                    <!--Why it's important-->
+                    <div class="service-list">
+                        <div class="service-list-col1">
+                        </div>
+                        <i></i>
+                        <div class="service-list-col3">
+                            <h3><b>Armor</b></h3>
+                            <p>
+                                Choosing armor can be difficult. More protective armor means more expensive
+                                more weight and more restrictive to your movement.You'll have to take
+                                these things into consideration if your character relies on being
+                                particularly agile or if they're more in the frontline. Here's a
+                                <!--link-->
+                                <a href="https://www.dndbeyond.com/sources/basic-rules/equipment#ArmorandShields">link</a>
+                                that'll help give more details on armor and show you the options available to you.
+                            </p>
+                        </div>
+                    </div>
+                    <!--Being prepared-->
+                    <div class="service-list">
+                        <div class="service-list-col1">
+                        </div>
+                        <i></i>
+                        <div class="service-list-col4">
+                            <h3><b>Weapons</b></h3>
+                            <p>
+                                Like armor, choosing the weapons for your character to carry can be equally
+                                troublesome. Weight and cost is less of a factor when choosing your weapons,
+                                the main conern is the amount of damage they do and what type of damage they do.
+                                Piercing, slashing, and bludgeoning can all have different effects on the same foe.
+                                Here's a
+                                <!--link-->
+                                <a href="https://www.dndbeyond.com/sources/basic-rules/equipment#Weapons">link</a>
+                                that'll help break down some of the weapons for you and give you some extra insight.
+                            </p>
+                        </div>
+                    </div>
 
-            <!--image-->
+                </div>
+            </div>
 
 
         </div>
 
     </section><!--main-section-end-->
+    <!-- ============================================================================================================================== -->
+    <!-- ============================================================ Back to link ==================================================== -->
+    <!-- ============================================================================================================================== -->
+    <section class="main-section" id="Equipment and stats">
 
+        <!--main-section-start-->
+        <div class="container">
+            <a href="Group_C_D&D charactercreation.html"><h2><u>Back to Character Building</u></h2></a>
+        </div>
+
+    </section><!--main-section-end-->
     <!-- ============================================================================================================================== -->
     <!-- ====================================================== FOOTER SECTION ======================================================== -->
     <!-- ============================================================================================================================== -->
