--- a/Group_C_D&D charactercreation.html
+++ b/Group_C_D&D charactercreation.html
@@ -14,7 +14,9 @@
 
 
     DATE			USER				DESCRIPTION OF CHANGE
-    03/27/2020	William Cook			Initial implementation
+    03/27/2020    William Cook			Initial implementation
+    04/05/2020    William Cook          Filled in content
+    4/11/2020     William Cook          Added Equipment
 ============================================================================
 ======================================================================== -->
 
@@ -552,11 +554,12 @@
             <h2>Choosing Equipment</h2>
             <h6>Now we'll choose equipment and make some calculations</h6>
 
-            <!--image-->
-            <figure class="col-lg-4 col-sm-6  text-left wow fadeInUp delay-02s">
+            <!--linked image-->
+            <figure class="col-lg-6 col-sm-6  text-left wow fadeInUp delay-02s">
                 <br>
-                <br>
-                <img src="img/creator.jpg" alt="Creator Image">
+                <a href="Group_C_D&D - character creation_equipment.html">
+                    <img src="img/armory.jpg" alt="Armory Image">
+                </a>
             </figure>
 
             <div align="center" class="row">
@@ -571,9 +574,9 @@
                             <h3><b>Preset Equipment</b></h3>
                             <p>
                                 Each class has some options of preset equipment that
-                                generally have some left over gold for any other odds
-                                and ends that you might have interest in. Some backgrounds
-                                also provide your character with some equipment as well.
+                                are well balanced and ensure you have everything you
+                                need to start your adventure. Some backgrounds also
+                                provide your character with additional equipment as well.
                             </p>
                         </div>
                     </div>
@@ -638,7 +641,7 @@
             <div class="row">
                 <br>
                 <!--Fadein-->
-                <div class="col-lg-4 col-sm-6 wow fadeInRight delay-05s">
+                <div class="col-lg-7 col-sm-6 wow fadeInRight delay-05s">
                     <div class="service-list">
                         <!--Above first level-->
                         <div class="service-list-col1">
@@ -669,17 +672,18 @@
                             <h3><b>How to level</b></h3>
                             <p>
                                 Leveling involves your character gaining experience which
-                                grants them additional features from their class, more 
+                                grants them additional features from their class, more
                                 hitpoints, and improving their ability scores.
                             </p>
                         </div>
                     </div>
                 </div>
                 <!--image-->
-                <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="img/creator.jpg" alt="Creator Image">
+                <figure class="col-lg-4 col-sm-4  text-right wow fadeInUp delay-02s">
+                    <img src="img/powering up.jpg" alt="Creator Image">
                 </figure>
             </div>
+
         </div>
     </section><!--main-section-end-->
     <!-- ============================================================================================================================== -->
