--- a/Group_C_D&D - About.html
+++ b/Group_C_D&D - About.html
@@ -151,7 +151,7 @@
                 	<div class="service-list-col1">
                     </div>
 					<i></i>
-                	<div class="service-list-col2">
+                	<div class="featured-box-col2">
                         <h3>Contribution 1</h3>
                         <p>Contribution 1 Description</p>
                     </div>
@@ -160,7 +160,7 @@
                 	<div class="service-list-col1">
 					<i></i>
                     </div>
-                	<div class="service-list-col2">
+                	<div class="featured-box-col2">
                         <h3>Contribution 2</h3>
                         <p>Contribution 2 Description</p>
                     </div>
@@ -169,7 +169,7 @@
                 	<div class="service-list-col1">
                     <i></i>
                     </div>
-                	<div class="service-list-col2">
+                	<div class="featured-box-col2">
                         <h3>Contribution 3</h3>
                         <p>Contribution 3 Description</p>
                     </div>
@@ -246,19 +246,19 @@
                 	<div class="service-list-col1">
                     </div>
 					<i></i>
-                	<div class="service-list-col2">
+                	<div class="featured-box-col2">
                         <h3>I'm Cameron</h3>
-                        <p><li>I've been playing Dungeons and Dragons for about 5 years.
-				I've been a Dungeons and Dragons master for the same amount of time, creating my own worlds and stories.
-				I wanted to show/teach other players how to create a d&d game and show others how easy it can be to create your own world.
-				My goal is to show as many people as I possibly can how to create their own story in the world of Dungeons and Dragons.</li></p>
+                        <p>I've been playing Dungeons and Dragons for about 5 years. I've been a Dungeons and Dragons master for the same 
+						amount of time, creating my own worlds and stories.	I wanted to show/teach other players how to create a d&d game 
+						and show others how easy it can be to create your own world. My goal is to show as many people as I possibly can 
+						how to create their own story in the world of Dungeons and Dragons.</p><br>
                     </div>
                 </div>
                 <div class="service-list">
                 	<div class="service-list-col1">
 					<i></i>
                     </div>
-                	<div class="service-list-col2">
+                	<div class="featured-box-col2">
                         <h3>Contribution 2</h3>
                         <p>Contribution 2 Description</p>
                     </div>
@@ -267,7 +267,7 @@
                 	<div class="service-list-col1">
                     <i></i>
                     </div>
-                	<div class="service-list-col2">
+                	<div class="featured-box-col2">
                         <h3>Contribution 3</h3>
                         <p>Contribution 3 Description</p>
                     </div>
@@ -300,30 +300,35 @@
                     </div>	
                 	<div class="featured-box-col2 wow fadeInRight delay-02s">
                         <h3>I'm Floyd!!</h3>
-						<p><li>
+						<p>
 						  My hobbies include basketball, video gaming, and reading.
                         I'm a student at Jackson College.
                         I'm currently studying Computer Programming Specialist.
                        After Jackson, I plan to continue my education at Siena Heights University.
-					   </p>
-					   <h3></h3>
-                        <h3>Documentation/paperwork:</h3>
-						<p></p>
-						<p><li>One of my contributions for this project is handling/editing a good amount of the paperwork.
-								Our project manager give's me specific items or specific resources to ensure that I have what is need to complete our reports.</li></p>
+					   </p><br>
                     </div>    
-                </div>
-                <div class="featured-box">
-                	<div class="featured-box-col1 wow fadeInRight delay-04s">
-                    <i></i>
-                    </div>	
-                	<div class="featured-box-col2 wow fadeInRight delay-04s">
-                        <h3>About page creation:</h3>
-                        <p><li>Another of my contributions involves creating the about page for our group.
-						Each group member has their own section with information about them as well as their contributions to the project.
-						My job is to gather each individuals information and insert the material into specific group members area.</li></p>
-                    </div>    
-               </div>
+					</div>
+					<div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-04s">
+						<i></i>
+						</div>	
+						<div class="featured-box-col2 wow fadeInRight delay-04s">
+							<h3>Documentation & Paperwork</h3>
+							<p>One of my contributions for this project is handling/editing a good amount of the paperwork.
+									Our project manager give's me specific items or specific resources to ensure that I have what is need to complete our reports.</p><br>
+						</div>    
+				   </div>
+				   <div class="featured-box">
+						<div class="featured-box-col1 wow fadeInRight delay-04s">
+						<i></i>
+						</div>	
+						<div class="featured-box-col2 wow fadeInRight delay-04s">
+							<h3>About Page Creation</h3>
+							<p>Another of my contributions involves creating the about page for our group.
+							Each group member has their own section with information about them as well as their contributions to the project.
+							My job is to gather each individuals information and insert the material into specific group members area.</li></p>
+						</div>    
+				   </div>
 </section><!--main-section alabaster-end-->
 
 
