--- a/Group_C_D&D - character creation_equipment.html
+++ b/Group_C_D&D - character creation_equipment.html
@@ -1,5 +1,4 @@
-﻿open
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <!-- =======================================================================
 ============================================================================
