character creation adjustments
added images and adjusted some formattting

--- a/Group_C_D&D charactercreation.html
+++ b/Group_C_D&D charactercreation.html
@@ -177,7 +177,7 @@
             <h6>First you'll need to choose a Race and Class</h6>
             <div class="row">
                 <!--Fadein-->
-                <div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
+                <div class="col-lg-4 col-lg-push-1 col-sm-6 wow fadeInLeft delay-05s">
                     <!--Races-->
                     <div class="service-list">
                         <div class="service-list-col1">
@@ -277,9 +277,15 @@
                             <p>Human with an infernal heritage, haiving large horns and thick tails</p>
                         </div>
                     </div>
+
+                    <!--image-->
+                    <figure class=" col-lg-14 col-lg-pull-1 col-sm-6  text-right wow fadeInUp delay-02s">
+                        <br>
+                        <img src="img/races.jpg" alt="Races Image">
+                    </figure>
                 </div>
                 <!--Fadein-->
-                <div class="col-lg-4 col-sm-6 text-right wow fadeInRight delay-05s">
+                <div class="col-lg-4 col-lg-push-1 col-sm-6 text-right wow fadeInRight delay-05s">
                     <!--Classes-->
                     <div class="service-list">
                         <div class="service-list-col1">
@@ -426,10 +432,11 @@
 
             <!--image-->
 			<figure  class="col-lg-4 col-sm-6  text-right wow fadeInUp delay-02s">
-				<img src="img/creator.jpg" alt="Creator Image">
+				<img src="img/ability scores.jpg" alt="Ability scores Image">
 			</figure>
 
             <div align="center" class="row">
+                <br>
                 <br>
                 <!--Fadein-->
                 <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
@@ -440,35 +447,39 @@
                         <i></i>
                         <div class="service-list-col3">
                             <h3><b>Ability Scores</b></h3>
-                            <p>Ability scores are the defining attributes of your character. They determine
-                            how good or bad your character will be with the skills dependent on them and 
-                            what strengths and weaknesses your character possesses.</p>
+                            <p>
+                                Ability scores are the defining attributes of your character. They determine
+                                how good or bad your character will be with the skills dependent on them and
+                                what strengths and weaknesses your character possesses.
+                            </p>
                         </div>
                     </div>
                 </div>
-				<br>
-				<br>
-				<br>
-				<br>
+                <br>
+                <br>
+                <br>
+                <br>
                 <!--Fadein-->
-				<div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
-					<!--Modifiers-->
-					<div class="service-list">
-						<div class="service-list-col1">
-						</div>
-						<i></i>
-						<div class="service-list-col4">
-							<h3><b>Modifiers</b></h3>
-							<p>Modifiers are the bonuses or penalties that are calculated based on 
-                            the value of each particular skill that your character possesses and help or 
-                            hinder you when you perform actions dependant on those skills.</p>
-						</div>
-					</div>
-				</div>
-				<br>
-				<br>
-				<br>
-				<br>
+                <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
+                    <!--Modifiers-->
+                    <div class="service-list">
+                        <div class="service-list-col1">
+                        </div>
+                        <i></i>
+                        <div class="service-list-col4">
+                            <h3><b>Modifiers</b></h3>
+                            <p>
+                                Modifiers are the bonuses or penalties that are calculated based on
+                                the value of each particular skill that your character possesses and help or
+                                hinder you when you perform actions dependant on those skills.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
                 <!--Fadein-->
                 <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
                     <!--Proficiencies-->
@@ -478,12 +489,14 @@
                         <i></i>
                         <div class="service-list-col3">
                             <h3><b>Proficiencies</b></h3>
-                            <p>Proficiencies are the equipment, skills, tools, and other characteristics
-                            that your character is competent of or is skilled with.</p>
+                            <p>
+                                Proficiencies are the equipment, skills, tools, and other characteristics
+                                that your character is competent of or is skilled with.
+                            </p>
                         </div>
                     </div>
                 </div>
-			</div>
+            </div>
 		</div>
 
     </section><!--main-section-end-->
@@ -499,7 +512,7 @@
             <div class="row">
                 <br>
                 <!--Fadein-->
-                <div class="col-lg-4 col-sm-6 wow fadeInRight delay-05s">
+                <div class="col-lg-7 col-sm-6 wow fadeInRight delay-05s">
                     <div class="service-list">
                         <!--Character-Details-->
                         <div class="service-list-col1">
@@ -539,8 +552,8 @@
                     </div>
                 </div>
                 <!--image-->
-                <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="img/creator.jpg" alt="Creator Image">
+                <figure class="col-lg-4 col-sm-6  text-right wow fadeInUp delay-02s">
+                    <img src="img/character background.jpg" alt="character background Image">
                 </figure>
             </div>
         </div>
@@ -558,7 +571,7 @@
             <figure class="col-lg-6 col-sm-6  text-left wow fadeInUp delay-02s">
                 <br>
                 <a href="Group_C_D&D - character creation_equipment.html">
-                    <img src="img/armory.jpg" alt="Armory Image">
+                    <img src="img/armory.jpg" alt="Equipment Image">
                 </a>
             </figure>
 
@@ -680,7 +693,7 @@
                 </div>
                 <!--image-->
                 <figure class="col-lg-4 col-sm-4  text-right wow fadeInUp delay-02s">
-                    <img src="img/powering up.jpg" alt="Creator Image">
+                    <img src="img/powering up.jpg" alt="leveling Image">
                 </figure>
             </div>
 
@@ -696,14 +709,15 @@
             <h6>We highly recommend putting your character's information on a character sheet!</h6>
 
             <!--image-->
-            <figure class="col-lg-4 col-sm-6  text-right wow fadeInUp delay-02s">
-                <img src="img/creator.jpg" alt="Creator Image">
+            <figure class="col-lg-2 col-lg-push-2 col-sm-6  text-right wow fadeInUp delay-02s">
+                <img src="img/character sheets.jpg" alt="character sheet Image">
             </figure>
 
             <div align="center" class="row">
                 <br>
+                <br>
                 <!--Fadein-->
-                <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
+                <div class="col-lg-6 col-lg-push-2 col-sm-2 wow fadeInLeft delay-05s">
                     <!--What are they-->
                     <div class="service-list">
                         <div class="service-list-col1">
@@ -727,7 +741,7 @@
                 <br>
                 <br>
                 <!--Fadein-->
-                <div class="col-lg-4 col-sm-2 wow fadeInLeft delay-05s">
+                <div class="col-lg-4 col-lg-push-2 col-sm-2 wow fadeInLeft delay-05s">
                     <!--Why use them-->
                     <div class="service-list">
                         <div class="service-list-col1">
@@ -737,7 +751,7 @@
                             <h3><b>Why use them</b></h3>
                             <p>
                                 The biggest benefit of a character sheet
-                                is the quick reference it provides when you need to 
+                                is the quick reference it provides when you need to
                                 know a specific detail of your character. They also
                                 neatly organize all of your character's information
                                 which comes in handy when it comes time to level-up
