Last Minute Changes
I am sorry for the last minute push. I cleaned it up a bit more.

--- a/Group_C_D&D - WB.html
+++ b/Group_C_D&D - WB.html
@@ -121,12 +121,12 @@ SECTION BELOW AND PASTE IT FURTHER DOWN AND ALTER THE 'ID' IN THE TOP LEVEL 'SEC
                     <p>General Instructions on Pantheon Creation!</p>
                 </div>
             	<div class="Portfolio-box Multiverse">
-                	<a href="#Multiverse"><img src="img/creator.jpg" alt="Multiverse"></a>
+                	<a href="#Multiverse"><img src="img/Multiverse.jpg" alt="Multiverse"></a>
                 	<h3>Multiverse</h3>
                     <p>General Instructions on Multiverse Creation!</p>
                 </div>
                 <div class=" Portfolio-box Kingdom">
-                	<a href="Kingdom"><img src="img/Background2.jpg" alt="Kingdom"></a>
+                	<a href="#Kingdom"><img src="img/Background2.jpg" alt="Kingdom"></a>
                 	<h3>Kingdom Creation</h3>
                     <p>General Instructions on how to create a Kingdom!</p>
                 </div>
@@ -165,7 +165,9 @@ TO MAINTAIN CONSISTANCY -->
                     </div>
                 	<div class="service-list-col2">
                         <p>It is very simple to make a pantheon! </p>
-						<p>Just follow these simple steps! Clikc to find out more!</p>
+						<p>Your Pantheon is Your Own. Your own Goddesses, Gods,  </p>
+						<p>Titans, Demi-Gods and So on. Click to find out more!</p>
+						
                     </div>
                 </div>
             </div>
@@ -177,7 +179,7 @@ TO MAINTAIN CONSISTANCY -->
 	</div>
 </section><!--main-section-end-->
 
-<section class="main-section" id="Pantheon"><!--main-section-start-->
+<section class="main-section" id="Multiverse"><!--main-section-start-->
 	<div class="container">
 		<h2>Making a Multiverse</h2>
 		<br>
@@ -201,7 +203,7 @@ TO MAINTAIN CONSISTANCY -->
 					<i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <p>Creating a Multiverse is easier than what you may think! Click here to find out more!</p>
+                        <p>Your Multiverse. How is it shaped? I personally like a more cube. So at the center of the Multiverse where maybe the Gods are or somewhere even Gods cannot go for dramatic effect...Click here to find out more!</p>
                     </div>
                 </div>
             </div>
@@ -215,7 +217,7 @@ TO MAINTAIN CONSISTANCY -->
 
 <!-- THIS SECTION FLOATS IN FROM THE LEFT, THE SECTION ABOVE FLOATS IN FROM THE RIGHT. ALTERNATE THIS TO KEEP THE FLOW CONSISTANT 
 THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT AN "OPPOSITE" OF THE SECTION ABOVE. -->
-<section class="main-section" id="NEXT"><!--main-section-start-->
+<section class="main-section" id="Kingdom"><!--main-section-start-->
 	<div class="container">
 		<h2>Kingdom Creation</h2>
 		<br>
@@ -242,7 +244,7 @@ THIS SECTION IS THE SAME AS ABOVE, HOWEVER IT DOES CONTAIN TWEAKS THAT MAKE IT A
 					<i></i>
                     </div>
                 	<div class="service-list-col2">
-                        <p>Creating a Kingdom is extremely easy! Follow these simple steps! Click here to find out more! </p>
+                        <p>Start with a Kingdom. You do not need to plan a whole world from the start. You can start with One Kingdom. Think about what the kingdom is known for? What ideals do they hold? How does the government function?.... Click here to find out more! </p>
                     </div>
                 </div>
             </div>
